# GBench

./: .gitignore  .ruff.toml  README.md  pyproject.toml  run_ruff.sh  setup.sh
examples/: config.yaml  example_config.yaml  run.sh  run_example.py
examples/data/: questions.jsonl
examples/utils/: custom_parser.py  cut_thinking.py
gbench/: __init__.py  cli.py  runner.py
gbench/core/: __init__.py  data_processor.py  inference.py  judge.py  summary.py
gbench/templates/: judge_template.j2
gbench/utils/: __init__.py  file_utils.py  logger.py
